# http_3_restfulapi_pyscript_aioquic_starlette

./: README.md  pyproject.toml
src/: server.py  server_app.py
src/cert/: localhost.crt  localhost.key
src/lib/: http3_server.py
src/templates/: client_main.py  client_pyscript.html
